@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/lxc
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/lxc/ChangeLog,v 1.68 2015/03/13 08:54:55 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/lxc/ChangeLog,v 1.69 2015/03/14 09:21:31 hwoarang Exp $
+
+*lxc-1.1.0-r5 (14 Mar 2015)
+
+  14 Mar 2015; Markos Chandras <hwoarang@gentoo.org> +lxc-1.1.0-r5.ebuild:
+  Move tools from sbin to bin so we can start supporting unprivileged containers
 
   13 Mar 2015; Yixun Lan <dlan@gentoo.org> lxc-1.1.0-r4.ebuild:
   add ~arm keyword, test on cortex-a9 board
